--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/portfolio.css">
     <script src="dist/bundle.js"></script>
 </head>
 <body>
