--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Paul Rose</title>
+    <link rel="icon" href="public/favicon.ico" />
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/portfolio.css">
